# opencv-load-caffemodule

./: CMakeLists.txt  README.md  main.cpp  mnist_deploy.prototxt  mnist_deploy.prototxt~  mnist_iter_300000.caffemodel
